# agent-memory-cli

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  Makefile  PLAN.md  README.md  VERSIONING.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: BRANCH_STRATEGY.md
scripts/: next-version.sh  release-bump.sh
skills/agent-memory-cli-operator/: SKILL.md
skills/agent-memory-cli-operator/references/: commands.md
specs/: ARCHITECTURE.md  CLI_SPEC.md  ROADMAP.md  SCHEMA_SQLITE_V01.sql
src/: main.rs
src/commands/: mod.rs
src/db/: mod.rs
src/domain/: mod.rs  schema.rs
src/repository/: dynamic_record_repo.rs  dynamic_table_repo.rs  event_repo.rs  identity_repo.rs  metric_repo.rs  mod.rs  projection_outbox_repo.rs  schema_registry_repo.rs  scope_repo.rs  topk_repo.rs  user_repo.rs
src/service/: identity_service.rs  ingest_service.rs  mod.rs  query_service.rs  scope_service.rs  user_service.rs
tests/: cli_blackbox.rs
