[package]
name = "agent-memory-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local-first memory engine CLI scaffold for personal agents"
repository = "https://github.com/gongyola0213/agent-memory-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
